--- a/shorturl.html
+++ b/shorturl.html
@@ -2,7 +2,7 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto:300,300i,500,700,500i,900'/>
 <style>
 body{margin:0;padding:0;font-family:Roboto,Arial,sans-serif}
-.shorten-box{font-size:100%;font-weight:500;color:#666;margin:0}
+.shorten-box{font-size:100%;font-weight:500;color:#666;margin-right: 5px;text-align: right;}
 #output{display:inline-block;}
 .shorten-text{font-family: 'calibri', roboto, sans-serif;display:inline-block;color:#141924;margin-right:5px;border:1px solid transparent;line-height:1;padding:5px 0;}
 #foo{display:inline-block;background:#f8f8f8;border:1px solid #d5d5d5;border-radius:3px;padding:5px 8px;margin:0;box-shadow: inset 0px 0px 1px rgba(0,0,0,.08);font-family:Consolas,Monaco,'Andale Mono',monospace;font-size:14px;white-space:initial;word-spacing:normal;word-break:normal;hyphens:none;color:#000;cursor:pointer;line-height:1;}
